--- a/rosemary-front/src/app/app.component.html
+++ b/rosemary-front/src/app/app.component.html
@@ -1,12 +1,10 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced.  * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+<h2>Users from NestJS Backend</h2>
 
+<ul>
+  <li *ngFor="let user of users">
+    {{ user.name }} – {{ user.email }}
+  </li>
+</ul>
 <style>
   :host {
     --bright-blue: oklch(51.01% 0.274 263.83);
