Add conditional rendering for header

--- a/rosemary-front/src/app/app.component.html
+++ b/rosemary-front/src/app/app.component.html
@@ -1,4 +1,4 @@
-<rosemary-header></rosemary-header>
+<rosemary-header [userIsLogged]="users[0]?.isLoggedIn"></rosemary-header>
 
 <h2>Users from NestJS Backend</h2>
 
