--- a/rosemary-front/src/app/global/header/header.component.html
+++ b/rosemary-front/src/app/global/header/header.component.html
@@ -1,5 +1,10 @@
+@if(!userIsLogged) {
 <div class="header-logo"><h4>Log in/Sign up</h4></div>
+}
 <div class="header">
   <div class="header-logo"><h2>Rosemary</h2></div>
-  <div class="header-navBar"><button>Explore</button> <button>Discussion</button> <button>Profile</button> <button>search</button></div>
+  <div class="header-navBar">
+    <button>Explore</button> <button>Discussion</button>
+    <button>Profile</button> <button>search</button>
+  </div>
 </div>
