add  two headers

--- a/rosemary-front/src/app/global/header/header.component.html
+++ b/rosemary-front/src/app/global/header/header.component.html
@@ -1,10 +1,14 @@
 @if(!userIsLogged) {
-<div class="header-logo"><h4>Log in/Sign up</h4></div>
+<div class="header-loginBanner"><button class="btn-secondary">Log in/Sign up</button></div>
 }
 <div class="header">
-  <div class="header-logo"><h2>Rosemary</h2></div>
+  <div class="header-logo"><h2 class="header-logoTitle">Rosemary</h2></div>
   <div class="header-navBar">
-    <button>Explore</button> <button>Discussion</button>
-    <button>Profile</button> <button>search</button>
+    <button class="header-navBar-button btn-secondary">Explore</button>
+    <button class="btn-secondary">Discussion</button>
+    @if(userIsLogged) {
+    <button class="btn-secondary">Profile</button>
+    }
+    <button class="btn-secondary">search</button>
   </div>
 </div>
