--- a/rosemary-front/src/app/global/header/header.component.html
+++ b/rosemary-front/src/app/global/header/header.component.html
@@ -1,5 +1,5 @@
 @if(!userIsLogged) {
-<div class="header-loginBanner"><button class="btn-secondary">Log in/Sign up</button></div>
+<div class="header-loginBanner"><button class="btn-secondary" (click)="showLoginModal($event)">Log in/Sign up</button></div>
 }
 <div class="header">
   <div class="header-logo"><h2 class="header-logoTitle">Rosemary</h2></div>
@@ -12,3 +12,6 @@
     <button class="btn-secondary">search</button>
   </div>
 </div>
+@if(loginModal) {
+  <login-modal (closeModal)="loginModal = $event"></login-modal>
+}
