--- a/rosemary-front/src/app/components/landing-pages/login/login-modal.component.scss
+++ b/rosemary-front/src/app/components/landing-pages/login/login-modal.component.scss
@@ -1,42 +1,89 @@
 @import "../../../../styles.scss";
 .loginModal {
-    &-backdrop {
-        height: 100vh;
-        width: 100vw;
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 2;
-        cursor: pointer;
+  &-backdrop {
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 2;
+    cursor: pointer;
+  }
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  width: 30%;
+  height: 50%;
+  border-radius: 4px;
+  &-header {
+    display: flex;
+    width: 100%;
+    &Button {
+      background-color: $background;
+      flex: 1;
+      border: none;
+      height: 50px;
+      padding: 0;
+      cursor: pointer;
+      &:last-child {
+        flex: 0;
+        border-radius: 0 4px 0 0;
+      }
+      &:first-child {
+        border-radius: 4px 0 0 0;
+      }
+      &.selected {
+        background-color: $accent1;
+        color: $text;
+      }
     }
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fff;
-    width: 50%;
-    height: 50%;
-    &-header {
-        display: flex;
+  }
+  &-loginForm {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: flex;
+      flex-direction: column;
+      gap: 32px;
+      height: 70%;
+      width: 100%;
+      align-items: center;
+      justify-content: center;
+      & input {
+          width: 80%;
+          padding: 0;
+        //   margin: 0 auto;
+          background-color: $background;
+          border: 1px solid $primary;
+          border-radius: 20px;
+          height: 48px;
+          &::placeholder {
+            padding-left: 8px;
+            color: $primary;
+            font-size: 16px;
+          }
+      }
+    }
+    &-formActions {
         width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         &Button {
-            background-color: $background;
-            flex: 1;
-            border: none;
-            height: 50px;
-            padding: 0;
-            &:last-child {
-                flex: 0;
-            }
-        }
-        &Button.selected {
-            background-color: $primary;
+            border-radius: 20px;
+            height: 32px;
             color: $text;
+            background-color: $accent1;
+            border: none;
+            width: 25%;
         }
     }
 }
