--- a/rosemary-front/src/app/components/landing-pages/login/login-modal.component.scss
+++ b/rosemary-front/src/app/components/landing-pages/login/login-modal.component.scss
@@ -45,7 +45,7 @@
       }
     }
   }
-  &-loginForm {
+  &-loginForm, &-RegisterForm {
       position: absolute;
       top: 50%;
       left: 50%;
