--- a/rosemary-front/src/app/components/landing-pages/login/login-modal.component.html
+++ b/rosemary-front/src/app/components/landing-pages/login/login-modal.component.html
@@ -22,9 +22,11 @@
     </form>
     } @else {
     <form #form="ngForm" class="loginModal-RegisterForm" (submit)="formSubmit(form)">
-      <input id="email" type="email" placeholder="email *" [(ngModel)] = "user.email" [ngModelOptions]="{standalone: true}" required />
-      <input id="mobile" type="tel" placeholder="mobile number *" [(ngModel)] = "user.mobile" [ngModelOptions]="{standalone: true}" required />
-      <input id="password" type="password" placeholder="password *" [(ngModel)] = "user.password" [ngModelOptions]="{standalone: true}" required />
+      <input id="email" type="text" placeholder="username *" [(ngModel)] = "registerUser.username" [ngModelOptions]="{standalone: true}" required />
+      <input id="username" type="email" placeholder="email *" [(ngModel)] = "registerUser.email" [ngModelOptions]="{standalone: true}" required />
+      <input id="mobile" type="tel" placeholder="mobile number *" [(ngModel)] = "registerUser.mobile" [ngModelOptions]="{standalone: true}" required />
+      <input id="password" type="password" placeholder="password *" [(ngModel)] = "registerUser.password" [ngModelOptions]="{standalone: true}" required />
+      <input id="bio" type="textarea" placeholder="Tell us about yourself" [(ngModel)] = "registerUser.biography" [ngModelOptions]="{standalone: true}" required />
       <div class="loginModal-formActions">
         <button type="submit" class="loginModal-formActionsButton">Login</button>
       </div>
