add modal styling, basic logic

--- a/rosemary-front/src/app/components/landing-pages/modals/recipe-modal.component.html
+++ b/rosemary-front/src/app/components/landing-pages/modals/recipe-modal.component.html
@@ -1,2 +1,7 @@
 <div class="recipeFilter"></div>
-<div class="addRecipe"></div>
+<div class="addRecipe">
+    <div class="addRecipe-header">
+        <h3 class="addRecipe-headerTitle">Create a new Recipe</h3>
+        <button class="addRecipe-headerClose" (click)="closeModal()" >X</button>
+    </div>
+</div>
