--- a/rosemary-front/src/app/components/landing-pages/modals/recipe-modal.component.scss
+++ b/rosemary-front/src/app/components/landing-pages/modals/recipe-modal.component.scss
@@ -20,4 +20,19 @@ background-color: $accent1;
 opacity: .75;
 z-index: 2;
 border-radius: 6px;
+&-header {
+    margin: 0 auto;
+    position: relative;
+    &Title {
+        font-family: $body;
+        text-align: center;
+        margin: 0;
+        padding-top: 8px;
+    }
+    &Close {
+        position: absolute;
+        top: 8px;
+        right: 8px;
+    }
+}
 }
