--- a/rosemary-front/src/app/components/landing-pages/modals/recipe-modal.component.scss
+++ b/rosemary-front/src/app/components/landing-pages/modals/recipe-modal.component.scss
@@ -35,4 +35,30 @@ border-radius: 6px;
         right: 8px;
     }
 }
+&-stepper {
+    display: flex;
+    justify-content: space-between;
+    gap: 16px;
+    align-items: center;
+    padding: 0 64px;
+    margin-top: 32px;
+    &ProgressBar {
+        display: block;
+        height: 1px;
+        background-color: $accent3;
+        width: 100%;
+        border-radius: 20px;
+    }
+    &Step {
+        border-radius: 100%;
+        background-color: $background;
+        color: $text;
+        border: none;
+        width: 40px;
+        height: 25px;
+        font-family: $body;
+        font-weight: 500;
+        cursor: pointer;
+    }
+}
 }
