--- a/rosemary-front/src/app/components/landing-pages/modals/recipe-modal.component.html
+++ b/rosemary-front/src/app/components/landing-pages/modals/recipe-modal.component.html
@@ -1,42 +1,102 @@
 <div class="recipeFilter"></div>
 <div class="addRecipe">
-    <div class="addRecipe-header">
-        <h3 class="addRecipe-headerTitle">Create a new Recipe</h3>
-        <button class="addRecipe-headerClose" (click)="closeModal()" >X</button>
+  <div class="addRecipe-header">
+    <h3 class="addRecipe-headerTitle">Create a new Recipe</h3>
+    <button class="addRecipe-headerClose" (click)="closeModal()">X</button>
+  </div>
+  <div class="addRecipe-stepper">
+    <button
+      class="addRecipe-stepperStep"
+      [ngClass]="selectedStep == 1 ? 'selected' : ''"
+      (click)="selectStep(1)"
+    >
+      1
+    </button>
+    <div class="addRecipe-stepperProgressBar"></div>
+    <button
+      class="addRecipe-stepperStep"
+      [ngClass]="selectedStep == 2 ? 'selected' : ''"
+      (click)="selectStep(2)"
+    >
+      2
+    </button>
+    <div class="addRecipe-stepperProgressBar"></div>
+    <button
+      class="addRecipe-stepperStep"
+      [ngClass]="selectedStep == 3 ? 'selected' : ''"
+      (click)="selectStep(3)"
+    >
+      3
+    </button>
+  </div>
+  @if(selectedStep===1) {
+  <div class="addRecipe-firstStep">
+    <div class="addRecipe-firstStep-addName">
+      <h3>Add a name:</h3>
+      <input
+        type="text"
+        class="addRecipe-firstStep-addName-text ingredient-input"
+      />
     </div>
-    <div class="addRecipe-stepper">
-        <button class="addRecipe-stepperStep">1</button>
-        <div class="addRecipe-stepperProgressBar"></div>
-        <button class="addRecipe-stepperStep">2</button>
-        <div class="addRecipe-stepperProgressBar"></div>
-        <button class="addRecipe-stepperStep">3</button>
-    </div>
-    <div class="addRecipe-firstStep">
-        <div class="addRecipe-firstStep-addName">
-            <h3>Add a name:</h3>
-            <input type="text"/>
+    <div class="addRecipe-firstStep-addIngredients">
+      <h2>What ingredients will you use?</h2>
+      <div class="addRecipe-firstStep-addIngredientsContainer">
+        <div class="addRecipe-firstStep-addIngredientsContainer-subcontainer">
+          <label for="ingredient">Ingredient:</label>
+          <input
+            type="text"
+            id="ingredient"
+            class="ingredient-input"
+            [(ngModel)]="ingredient"
+            [ngModelOptions]="{ standalone: true }"
+          />
         </div>
-        <div class="addRecipe-firstStep-addIngredients">
-            <h2>What ingredients will you use?</h2>
-            <label for="ingredient">Ingredient:</label>
-            <input type="text" id="ingredient" [(ngModel)] = "ingredient" [ngModelOptions]="{standalone: true}"/>
-            <label for="quantity">quantity:</label>
-            <input type="number" id="quantity" [(ngModel)] = "quantity" [ngModelOptions]="{standalone: true}"/>
-            <label for="measure">measurement:</label>
-            <select name="measure" id="measure" [(ngModel)] = "measurement" [ngModelOptions]="{standalone: true}">
-                <option  selected disabled hidden>unit</option>
-                @for (option of measurements; track option) {
-                    <option>{{option}}</option>
-                }
-            </select>
-            <button (click)="addIngredient()">Add</button>
-        </div> 
-        <div class="addRecipe-firstStep-IngredientsContainer">
-            @for (ingredient of ingredients(); track ingredient) {
-                <div class="a"> {{ingredient}} </div>
-                <button>delete</button>
-                <button>Edit</button>
+        <div class="addRecipe-firstStep-addIngredientsContainer-subcontainer">
+          <label for="quantity">quantity:</label>
+          <input
+            type="number"
+            id="quantity"
+            class="ingredient-input"
+            [(ngModel)]="quantity"
+            [ngModelOptions]="{ standalone: true }"
+          />
+        </div>
+        <div class="addRecipe-firstStep-addIngredientsContainer-subcontainer">
+          <label for="measure">measurement:</label>
+          <select
+            name="measure"
+            id="measure"
+            class="ingredient-input"
+            [(ngModel)]="measurement"
+            [ngModelOptions]="{ standalone: true }"
+          >
+            <option selected disabled hidden>unit</option>
+            @for (option of measurements; track option) {
+            <option>{{ option }}</option>
             }
+          </select>
         </div>
+        <button
+          (click)="addIngredient()"
+          class="addRecipe-firstStep-addIngredientsContainer-btn btn-tertiary"
+        >
+          Add
+        </button>
+      </div>
     </div>
+    <div class="addRecipe-firstStep-ingredientsContainer">
+      @for (ingredient of ingredients(); track ingredient) {
+      <div class="addRecipe-firstStep-ingredientsContainer-content">
+        <h3>{{ ingredient }}</h3>
+        <button class="btn-tertiary">delete</button>
+        <button class="btn-tertiary">Edit</button>
+      </div>
+      }
+    </div>
+  </div>
+  }
+  <div class="addRecipe-actions">
+    <button class="btn-tertiary">Next</button>
+    <button class="btn-tertiary">Back</button>
+  </div>
 </div>
