--- a/rosemary-front/src/app/components/landing-pages/modals/recipe-modal.component.scss
+++ b/rosemary-front/src/app/components/landing-pages/modals/recipe-modal.component.scss
@@ -1,41 +1,41 @@
-@import '../../../../styles.scss';
+@import "../../../../styles.scss";
 
 .recipeFilter {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: 1;
-    backdrop-filter: blur(8px);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
+  backdrop-filter: blur(8px);
 }
 .addRecipe {
-position: fixed;
-top: 50%;
-left: 50%;
-width: 60vw;
-height: 75vh;
-transform: translate(-50%,-50%);
-background-color: $accent1;
-opacity: .75;
-z-index: 2;
-border-radius: 6px;
-&-header {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 60vw;
+  height: 75vh;
+  transform: translate(-50%, -50%);
+  background-color: $accent1;
+  opacity: 0.75;
+  z-index: 2;
+  border-radius: 6px;
+  &-header {
     margin: 0 auto;
     position: relative;
     &Title {
-        font-family: $body;
-        text-align: center;
-        margin: 0;
-        padding-top: 8px;
+      font-family: $body;
+      text-align: center;
+      margin: 0;
+      padding-top: 8px;
     }
     &Close {
-        position: absolute;
-        top: 8px;
-        right: 8px;
+      position: absolute;
+      top: 8px;
+      right: 8px;
     }
-}
-&-stepper {
+  }
+  &-stepper {
     display: flex;
     justify-content: space-between;
     gap: 16px;
@@ -43,22 +43,112 @@ border-radius: 6px;
     padding: 0 64px;
     margin-top: 32px;
     &ProgressBar {
-        display: block;
-        height: 1px;
-        background-color: $accent3;
-        width: 100%;
-        border-radius: 20px;
+      display: block;
+      height: 1px;
+      background-color: $accent3;
+      width: 100%;
+      border-radius: 20px;
     }
     &Step {
-        border-radius: 100%;
-        background-color: $background;
-        color: $text;
-        border: none;
-        width: 40px;
-        height: 25px;
-        font-family: $body;
-        font-weight: 500;
-        cursor: pointer;
+      border-radius: 100%;
+      background-color: $background;
+      color: $text;
+      border: none;
+      width: 40px;
+      height: 25px;
+      font-family: $body;
+      font-weight: 500;
+      cursor: pointer;
     }
+  }
+  &-firstStep {
+    padding: 0 64px;
+    margin-top: 32px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    h3 {
+      font-family: $body;
+      font-size: 12px;
+      line-height: 20px;
+      font-weight: 600;
+      color: $text;
+      margin: 0;
+    }
+    &-addName {
+      &-text {
+        width: 60%;
+      }
+    }
+    &-addIngredients {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      h2,
+      label {
+        font-family: $body;
+        font-size: 18px;
+        line-height: 26px;
+        font-weight: 600;
+        color: $text;
+        margin: 0;
+      }
+      label {
+        font-size: 12px;
+        line-height: 18px;
+      }
+      &Container {
+        display: flex;
+        gap: 4px;
+        align-items: end;
+      }
+      &-subcontainer {
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+      }
+    }
+    &-ingredientsContainer {
+      overflow-y: auto;
+      height: 35vh;
+      scrollbar-color: $text $accent1;
+      scrollbar-width: thin;
+      &-content {
+        display: flex;
+        h3 {
+          font-family: $body;
+          font-size: 18px;
+          line-height: 30px;
+          font-weight: 600;
+          color: $text;
+          margin: 0 32px 0 0;
+        }
+      }
+    }
+  }
 }
+.ingredient-input {
+  background-color: $accent1;
+  border: none;
+  border-bottom: 1px solid $text;
+  transition: all 0.3s ease-in-out;
+  padding-left: 4px;
+  font-family: $body;
+  color: $text;
+  &:focus-visible {
+    outline: none;
+    border-radius: 2px;
+    background-color: #fff;
+    transform: translateX(1px);
+  }
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
